--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" cont
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> PORTFOLIO WEBSITE</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
