--- a/index.html
+++ b/index.html
@@ -62,7 +62,52 @@
 
 </div>
 </div>
+
 </section>
 
+
+<div class="Service">
+<div class="title">
+<h2> Service</h2>
+</div>
+
+<div class="Box">
+<div class="card">
+<i class="fa-solid fa-bars"></i>
+<h5>Web Developement</h5>
+<div class="pra">
+<p>Every website should be with two primary goals: firstly, it needs to work across all device. secondly, it needs to be fast as possible</p>
+<p style="text-align: center;">
+	<a class="button" href="#">Read More</a>
+</p>
+</div>
+</div>
+
+<div class="card">
+<i class="fa-regular fa-user"></i>
+<h5>Web Developement</h5>
+<div class="pra">
+<p>Every website should be with two primary goals: firstly, it needs to work across all device. secondly, it needs to be fast as possible</p>
+<p style="text-align: center;">
+	<a class="button" href="#">Read More</a>
+</p>
+</div>
+</div>
+
+<div class="card">
+<i class="fa-regular fa-bell"></i>
+<h5>Web Developement</h5>
+<div class="pra">
+<p>Every website should be with two primary goals: firstly, it needs to work across all device. secondly, it needs to be fast as possible</p>
+<p style="text-align: center;">
+	<a class="button" href="#">Read More</a>
+</p>
+</div>
+</div>
+
+
+</div>
+</div>
+</div>
 </body>
 </html>
